5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1836_2603.log
== SUBMITION (2019-06-27 11:39:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:1], reverse = true)
print(mat)
		
		
		
	
-- EXECUTION TIME:
1.12388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 6, in <module>
    mat[:,i] = sorted(mat[:1], reverse = true)
NameError: name 'true' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:39:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:1], reverse = true)
print(mat)
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:39:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:1], reverse = True)
print(mat)
		
		
		
	
-- EXECUTION TIME:
1.03589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 6, in <module>
    mat[:,i] = sorted(mat[:1], reverse = True)
ValueError: setting an array element with a sequence.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:39:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:1], reverse = True)
print(mat)
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:,i], reverse = True)
print(mat)
		
		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:40:48) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat = array(eval(input("Insira a matriz: ")))
for i in range(4):
	mat[:,i] = sorted(mat[:,i], reverse = True)
print(mat)
		
		
		
	
-- EXECUTION TIME:
1.21483
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
